# hse-bot

./: Makefile  README.org  __main__.py  bot.ipynb  bot.py  pyproject.toml
app/: bot.py
